--- a/styles/_fonts.css
+++ b/styles/_fonts.css
@@ -1,8 +1,20 @@
-/* @font-face {
-  font-family: 'Example Sans';
-  src: url('../public/fonts/ExampleSans-Regular.woff2') format('woff2'),
-      url('../public/fonts/ExampleSans-Regular.woff') format('woff');
-  font-weight: 400;
+@font-face {
+  font-family: 'Pally';
+  src: local('Pally Medium'), local('Pally-Medium'),
+      url('../public/fonts/Pally-Medium.woff2') format('woff2'),
+      url('../public/fonts/Pally-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
-} */
+}
+
+@font-face {
+  font-family: 'Switzer';
+  src: local('Switzer Medium'), local('Switzer-Medium'),
+      url('../public/fonts/Switzer-Medium.woff2') format('woff2'),
+      url('../public/fonts/Switzer-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
