--- a/styles/main.css
+++ b/styles/main.css
@@ -14,5 +14,5 @@
 
 /* Simple defaults */
 body {
-  @apply font-sans antialiased text-black bg-white;
+  @apply font-sans antialiased text-off-black bg-off-white;
 }
