--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -1,7 +1,7 @@
 /* Content Stylings */
 .content {
   & > p {
-    @apply mb-5 last-of-type:mb-0;
+    @apply mb-6 md:mb-8 xl:mb-12 last-of-type:mb-0;
   }
 
   & > p > a {
@@ -14,6 +14,16 @@
 
   & > h2, & > .h2 {
     @apply text-2xl md:text-3xl;
+  }
+}
+
+.content--fancy {
+  & > p:first-of-type {
+    @apply text-xl md:text-2xl 2xl:text-3xl;
+  }
+
+  & > p {
+    @apply text-lg md:text-xl xl:text-2xl;
   }
 }
 
