--- a/styles/main.css
+++ b/styles/main.css
@@ -16,3 +16,128 @@
 body {
   @apply font-sans antialiased text-off-black bg-off-white;
 }
+
+
+.cover-image {
+  img {
+    @apply object-cover object-center;
+  }
+}
+
+.embla {
+  @apply relative mx-auto;
+}
+
+.embla__viewport {
+  @apply w-full overflow-hidden;
+}
+
+.embla__viewport.is-draggable {
+  cursor: move;
+  cursor: grab;
+}
+
+.embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+
+.embla__container {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+
+  @apply ml-[-8vw] flex;
+}
+
+.embla__slide {
+  @apply py-[3vw] pl-[8vw] min-w-[65vw] md:min-w-[55vw] relative;
+}
+
+.embla__slide__inner {
+  @apply rounded-xl -rotate-3 bg-opacity-60 h-[33vw] relative;
+
+  img {
+    @apply rounded-2xl !important;
+  }
+}
+
+.embla__slide__img {
+  @apply block inset-0 absolute w-full h-full object-cover object-center scale-100 rounded-2xl;
+}
+
+.embla__button {
+  outline: 0;
+  cursor: pointer;
+  opacity: 0;
+  background-color: transparent;
+  touch-action: manipulation;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  fill: #1bcacd;
+  padding: 0;
+}
+
+.embla__button:disabled {
+  cursor: default;
+  opacity: 0.3;
+}
+
+.embla__button__svg {
+  width: 100%;
+  height: 100%;
+}
+
+.embla__button--prev {
+  left: 27px;
+}
+
+.embla__button--next {
+  right: 27px;
+}
+
+.embla__dots {
+  @apply flex list-none  space-x-2 justify-center;
+}
+
+.embla__dot {
+  @apply rounded-full w-[18px] md:w-[22px] xl:w-[26px] h-[18px] md:h-[22px] xl:h-[26px] border border-green;
+}
+
+.embla__dot.is-selected {
+  @apply bg-green border border-green;
+}
+
+.image {
+  img {
+    @apply rounded-2xl;
+  }
+}
+
+.image--no-round {
+  img {
+    @apply rounded-lg;
+  }
+}
+
+.embla--single {
+  .embla__container {
+    @apply flex mx-1 2xl:mx-3;
+  }
+
+  .embla__slide {
+    @apply py-[3vw] min-w-full relative px-3 2xl:px-6;
+  }
+ 
+  .embla__slide__inner {
+    @apply h-[55vw] md:h-[28vw] xl:h-[27vw] 2xl:h-[480px];
+
+  }
+}
