--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -5,7 +5,7 @@
   }
 
   & > p > a {
-    @apply underline hover:text-opacity-25 focus:text-opacity-25;
+    @apply underline;
   }
 
   & > h1, & > .h1 {
@@ -24,6 +24,16 @@
 
   & > p {
     @apply text-lg md:text-xl xl:text-2xl;
+  }
+}
+
+.content--fancy--small {
+  & > p:first-of-type {
+    @apply text-lg md:text-[22px] 2xl:text-[26px] leading-snug md:leading-snug xl:leading-snug;
+  }
+
+  & > p {
+    @apply text-base md:text-[19px] 2xl:text-[22px] leading-snug md:leading-snug xl:leading-snug mb-5 md:mb-6 xl:mb-8;
   }
 }
 
