--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -5,7 +5,7 @@
   }
 
   & > p > a {
-    @apply underline;
+    @apply underline hover:text-pink focus:outline-none focus-visible:outline-none focus-visible:border-none focus-visible:ring-4 ring-pink ring-offset-off-white ring-offset-4;
   }
 
   & > h1, & > .h1 {
