--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -4,6 +4,10 @@
     @apply mb-6 md:mb-8 xl:mb-12 last-of-type:mb-0;
   }
 
+  & > ul {
+    @apply mb-6 md:mb-8 xl:mb-12;
+  }
+
   & > p > a {
     @apply underline hover:text-pink focus:outline-none focus-visible:outline-none focus-visible:border-none focus-visible:ring-4 ring-pink ring-offset-off-white ring-offset-4;
   }
@@ -25,6 +29,10 @@
   & > p {
     @apply text-lg md:text-xl xl:text-2xl;
   }
+
+  & > ul {
+    @apply text-lg md:text-xl xl:text-2xl;
+  }
 }
 
 .content--fancy--small {
@@ -34,6 +42,13 @@
 
   & > p {
     @apply text-base md:text-[19px] 2xl:text-[22px] leading-snug md:leading-snug xl:leading-snug mb-5 md:mb-6 xl:mb-8;
+  }
+
+  & > ul {
+    @apply text-base md:text-[19px] 2xl:text-[22px] leading-snug md:leading-snug xl:leading-snug mb-5 md:mb-6 xl:mb-8;
+    li {
+      @apply pb-3;
+    }
   }
 }
 
